# routes/users.js
@@ -7,8 +7,8 @@ const router = express.Router();
 
 
 // user routes
-router.post("/token", userControllers.token);
-router.post("/", auth.isStaff, userControllers.createUser);
+router.post("/signin", userControllers.token);
+router.post("/create-user", auth.isStaff, userControllers.createUser);
 router.get("/", auth.verifyToken, userControllers.viewAllUsers);
 router.get("/:id", auth.verifyToken, userControllers.getUserById);
 router.patch("/:id", auth.verifyToken, userControllers.modifyUser);
