# swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: DevC Capstone Projectc
+  title: DevC Capstone Project
   description: "Description"
   version: 1.0.0
 servers:
@@ -9,16 +9,143 @@ servers:
   - url: http://staging-api.example.com
     description:  "description"
 paths:
-  /users:
-    get:
-      summary: Returns a list of users.
-      description: Optional extended description in CommonMark or HTML.
+  /auth/create-user:
+    post:
+      summary: Create user account.
+      description: Admin can create an employee user account
       responses:
         '200':    # status code
-          description: A JSON array of user names
+          description: Created user object
           content:
             application/json:
               schema: 
-                type: array
+                type: object
                 items: 
-                  type: string
+                  status: string
+                  data:
+  /auth/signin:
+    post:
+      summary: Login a user
+      description: Admin/Employees can sign in
+      responses:
+        '200':    # status code
+          description: jwt
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+  /auth/:id:
+    get:
+      summary: Return user by id
+      description: 
+      responses:
+        '200':    # status code
+          description: User
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+  /gifs:
+    post:
+      summary: Create a gif.
+      description: 
+      responses:
+        '200':    # status code
+          description: Gif
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+
+  /articles:
+    post:
+      summary: Create an article
+      description: 
+      responses:
+        '200':    # status code
+          description: Article
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+  /articles/:id:
+    patch:
+      summary: Edit an article
+      description: 
+      responses:
+        '200':    # status code
+          description: Article
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+
+  
+    delete:
+      summary: Delete an article
+      description: Employees can delete their articles
+      responses:
+        '200':    # status code
+          description: Article
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+    get:
+      summary: GET an article
+      description: Employees can view a specific article
+      responses:
+        '200':    # status code
+          description: Article
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+  /gifs/:id:
+    delete:
+      summary: Delete an gif
+      description: Employees can delete their gifs
+      responses:
+        '200':    # status code
+          description: Gif
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
+  get:
+      summary: GET an gif
+      description: Employees can view a specific gif post
+      responses:
+        '200':    # status code
+          description: Gif
+          content:
+            application/json:
+              schema: 
+                type: object
+                items: 
+                  status: string
+                  data:
